public/css/styles.css
.light-grey-background {
    background-color:#eeeeee;
}

.lighter-grey-background {
    background-color:#fcfcfc;
}

.legend-color-indicator {
    float: left;
    width: 20px;
    height: 20px;
    margin: 0px;
    border-width: 1px;
    border-style: solid;
    border-color: rgba(0,0,0,.2);
}

.white-background {
    background-color:#ffffff;
}

.input-container {
    min-height: 220px;
}

.input-panel {
    background-color: #555;
    color: #EEE;
    margin: 8px 0px;
    min-height: 40px;
    padding: 4px;
}

.input-panel:hover {
    background-color: #666;
    color: #fff;
}

.input-panel-active {
    background-color: #777;
    color: #FFF;
    
}

.bottom {
    position:absolute;
    bottom:8px;
}



#anionParent {
    width: 200px;
    height: 150px;
    background-color: #eeeeee;
}

#cationParent {
    width: 200px;
    height: 150px;
    background-color: #eeeeee;
}

#anionMol {
    width: 100%;
    height: 70%;
    background-color: #eeeeee;
}

#cationMol {
    width: 100%;
    height: 70%;
    background-color: #eeeeee;
}

#anionMol_src {
    display: none;
}

#cationMol_src {
    display: none;
}

#chartContainer {
    min-height: 280px;
}

hr {
    color: #888888;
    height: 1px !important;
    width: 100%;
    background-color: black;
}

/*!
 * Start Bootstrap - Simple Sidebar HTML Template (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

/* Toggle Styles */

#wrapper {
    padding-left: 0;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#wrapper.toggled {
    padding-left: 250px;
}

#sidebar-wrapper {
    z-index: 1000;
    position: fixed;
    left: 250px;
    width: 0;
    height: 100%;
    margin-left: -250px;
    padding: 0px;
    overflow-y: auto;
    background: #444;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#wrapper.toggled #sidebar-wrapper {
    width: 250px;
}

#page-content-wrapper {
    width: 100%;
    position: absolute;
    padding: 0px;
}


#wrapper.toggled #page-content-wrapper {
    position: absolute;
    margin-right: -250px;
}

/* Sidebar Styles */

.sidebar-nav {
    position: absolute;
    top: 0;
    width: 250px;
    margin: 0;
    padding: 0;
    list-style: none;
}

.sidebar-nav li a:hover {
    text-decoration: none;
    color: #fff;
    background: rgba(255,255,255,0.2);
}

 .sidebar-title {
    text-indent: 20px;
    height: 65px;
    font-size: 18px;
    line-height: 60px;
    color: #fff;
}

.sidebar-nav > .sidebar-brand a {
    color: #FFFFFF;
}

.sidebar-nav > .sidebar-brand a:hover {
    color: #fff;
    background: none;
}

@media(min-width:768px) {
    #wrapper {
        padding-left: 250px;
    }
    
    #wrapper.toggled {
        padding-left: 0;
    }
    
    #sidebar-wrapper {
        padding: 8px;
    }
    
    #canvasParent {
        width: calc(100% - 250px);
    }
    
    #chartContainer {
        width: calc(100% - 250px);
    }
    
    #slidersContainer {
        width: calc(100% - 250px);      
    }

    #sidebar-wrapper {
        width: 250px;
    }

    #wrapper.toggled #sidebar-wrapper {
        width: 0;
    }

    #page-content-wrapper {
        padding: 20px;
        position: relative;
    }

    #wrapper.toggled #page-content-wrapper {
        position: relative;
        margin-right: 0;
    }
}

//Sliders
#slidersContainer { //This empty one fixes sliders style
       
}


input[type=range].slider {
  -webkit-appearance: none;
  width: 80%;
  margin-bottom: 10px;
  margin-top: 10px;
  display: inline-block;
  margin-left: 50px;
}
input[type=range].slider:focus {
  outline: none;
}
input[type=range].slider::-webkit-slider-runnable-track {
  width: 80%;
  height: 10px;
  cursor: pointer;
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  background: #444444;
  border-radius: 0px;
  border: 0px solid #010101;
}
input[type=range].slider::-webkit-slider-thumb {
  box-shadow: 0px 0px 1px #670000, 0px 0px 0px #810000;
  border: 0px solid #ff1e00;
  height: 12px;
  width: 18px;
  border-radius: 0px;
  background: rgba(255, 67, 95, 0.93);
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -1px;
}
input[type=range].slider:focus::-webkit-slider-runnable-track {
  background: #515151;
}
input[type=range].slider::-moz-range-track {
  width: 80%;
  height: 10px;
  cursor: pointer;
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  background: #444444;
  border-radius: 0px;
  border: 0px solid #010101;
}
input[type=range].slider::-moz-range-thumb {
  box-shadow: 0px 0px 1px #670000, 0px 0px 0px #810000;
  border: 0px solid #ff1e00;
  height: 12px;
  width: 18px;
  border-radius: 0px;
  background: rgba(255, 67, 95, 0.93);
  cursor: pointer;
}
input[type=range].slider::-ms-track {
  width: 80%;
  height: 10px;
  cursor: pointer;
  background: transparent;
  border-color: transparent;
  color: transparent;
}
input[type=range].slider::-ms-fill-lower {
  background: #373737;
  border: 0px solid #010101;
  border-radius: 0px;
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
}
input[type=range].slider::-ms-fill-upper {
  background: #444444;
  border: 0px solid #010101;
  border-radius: 0px;
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
}
input[type=range].slider::-ms-thumb {
  box-shadow: 0px 0px 1px #670000, 0px 0px 0px #810000;
  border: 0px solid #ff1e00;
  height: 12px;
  width: 18px;
  border-radius: 0px;
  background: rgba(255, 67, 95, 0.93);
  cursor: pointer;
  height: 10px;
}
input[type=range].slider:focus::-ms-fill-lower {
  background: #444444;
}
input[type=range].slider:focus::-ms-fill-upper {
  background: #515151;
}

#slidersContainer {
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 10px;
    background-color: #eeeeee;
}

